feat[auth-export-report] Enhance "MARC authority headings update" Report with Record Type Column Based on Consortium Environment.